test/test_12111645_1.out
Error type A at line 3: unknown lexeme 4294967299
ERROR type A at line 4: unknown lexeme 012
ERROR type A at line 5: unknown lexeme 0xaaaaaaaaaa
ERROR type A at line 6: unknown lexeme '\x0'
