test/test_12111645_1.spl
int test_1()
{
    int a=4294967299;
    int b=012;
    int d=0xaaaaaaaaaa;
    char e='\x0';
    
}